--- a/index.html
+++ b/index.html
@@ -15,7 +15,37 @@
     }
       </style>
 </head>
-<body>
-    
+<body class="manrope">
+    <header class="mx-44">
+        <div class="flex">
+            <div>
+                <h1 class="text-[80px] font-extrabold">
+                    It's good <br>
+                    tea time at The <br> Tea House
+                </h1>
+                <p class="text-[#777777] text-lg font-medium">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <div class="flex">
+                    <div>
+                        <button class="p-5 bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white rounded-xl font-bold">
+                            Explore More 
+                        </button>
+                    </div>
+                    <div>
+                        <img src="./images/arrow.png" alt="">
+                    </div>
+                </div>    
+            </div>
+            <div>
+                <img src="./images/banner.png" alt="">
+                <div class="inline relative rounded-xl" style="box-shadow: 0px 7px 50px 0px rgba(0, 0, 0, 0.06);">
+                    <div><img src="./images/star-icon.jpg" alt=""></div>
+                    <div>
+                        <h4 class="text-black text-3xl">5.00</h4>
+                        <p class="text-[#777777] text-lg">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
