--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     It's good <br>
                     tea time at The <br> Tea House
                 </h1>
-                <p class="text-[#777777] text-lg font-medium">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <div class="flex">
+                <p class="text-[#777777] text-lg font-medium pb-5">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <div class="flex gap-4 p-5 bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white rounded-xl font-bold w-[200px]">
                     <div>
-                        <button class="p-5 bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white rounded-xl font-bold">
+                        <button>
                             Explore More 
                         </button>
                     </div>
@@ -35,17 +35,45 @@
                     </div>
                 </div>    
             </div>
-            <div>
+            <div class="mt-9">
                 <img src="./images/banner.png" alt="">
-                <div class="inline relative rounded-xl" style="box-shadow: 0px 7px 50px 0px rgba(0, 0, 0, 0.06);">
+                <div class="flex align-center justify-center gap-4 relative -top-20 left-24 bg-white rounded-xl p-5 w-64" style="box-shadow: 0px 7px 50px 0px rgba(0, 0, 0, 0.06);">
                     <div><img src="./images/star-icon.jpg" alt=""></div>
                     <div>
-                        <h4 class="text-black text-3xl">5.00</h4>
-                        <p class="text-[#777777] text-lg">Trust Pilot Ratings</p>
+                        <h4 class="text-black text-3xl font-extrabold">5.00</h4>
+                        <p class="text-[#777777] text-lg font-medium">Trust Pilot Ratings</p>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    <main>
+        <section class="text-center">
+            <h3 class="font-bold text-[2.8125rem]">Our Featured Products</h3>
+            <p class="text-lg text-[#777777] font-medium">There are many variations of passages of Lorem Ipsum available, but the majority  have suffered <br>alteration in some form, by injected humour, or randomised words <br> which don't look even slightly believable. </p>
+            <div class="flex justify-center gap-6 mt-10">
+                <div class="py-8 px-14 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
+                    <img src="./images/tea-1.png">
+                    <h4 class="font-bold text-2xl">Milk Tea</h4>
+                    <p class="text-lg text-[#777777] font-medium">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="py-8 px-14 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
+                    <img src="./images/tea-2.png" alt="">
+                    <h4 class="font-bold text-2xl">Black Tea</h4>
+                    <p class="text-lg text-[#777777] font-medium">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="py-8 px-14 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
+                    <img src="./images/tea-3.png" alt="">
+                    <h4 class="font-bold text-2xl">Black Tea</h4>
+                    <p class="text-lg text-[#777777] font-medium">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="py-8 px-14 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
+                    <img src="./images/tea-4.png" alt="">
+                    <h4 class="font-bold text-2xl">Black Tea</h4>
+                    <p class="text-lg text-[#777777] font-medium">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
