--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
             <h3 class="font-bold text-[2.8125rem]">Our Featured Products</h3>
             <p class="text-lg text-[#777777] font-medium">There are many variations of passages of Lorem Ipsum available, but the majority  have suffered <br>alteration in some form, by injected humour, or randomised words <br> which don't look even slightly believable. </p>
             <div class="flex justify-center gap-6 mt-10">
-                <div class="py-8 px-14 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
-                    <img src="./images/tea-1.png">
+                <div class="p-10 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
+                    <img src="./images/tea-1.png" class="block mx-auto mb-4">
                     <h4 class="font-bold text-2xl">Milk Tea</h4>
-                    <p class="text-lg text-[#777777] font-medium">Creamer could be replaced by fresh milk</p>
+                    <p class="text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
                 </div>
-                <div class="py-8 px-14 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
-                    <img src="./images/tea-2.png" alt="">
+                <div class="p-10 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
+                    <img src="./images/tea-2.png" class="block mx-auto mb-4">
                     <h4 class="font-bold text-2xl">Black Tea</h4>
-                    <p class="text-lg text-[#777777] font-medium">Creamer could be replaced by fresh milk</p>
+                    <p class="text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
                 </div>
-                <div class="py-8 px-14 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
-                    <img src="./images/tea-3.png" alt="">
+                <div class="p-10 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
+                    <img src="./images/tea-3.png" class="block mx-auto mb-4">
                     <h4 class="font-bold text-2xl">Black Tea</h4>
-                    <p class="text-lg text-[#777777] font-medium">Creamer could be replaced by fresh milk</p>
+                    <p class="text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
                 </div>
-                <div class="py-8 px-14 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
-                    <img src="./images/tea-4.png" alt="">
+                <div class="p-10 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
+                    <img src="./images/tea-4.png" class="block mx-auto mb-4">
                     <h4 class="font-bold text-2xl">Black Tea</h4>
-                    <p class="text-lg text-[#777777] font-medium">Creamer could be replaced by fresh milk</p>
+                    <p class="text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
                 </div>
             </div>
         </section>
