--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       </style>
 </head>
 <body class="manrope">
-    <header class="mx-44">
-        <div class="flex">
+    <header class="px-5 mt-8 lg:mx-44">
+        <div class="flex flex-col lg:flex-row">
             <div>
-                <h1 class="text-[80px] font-extrabold">
+                <h1 class="text-6xl lg:text-[80px] font-extrabold">
                     It's good <br>
                     tea time at The <br> Tea House
                 </h1>
-                <p class="text-[#777777] text-lg font-medium pb-5">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <p class="text-[#777777] text-sm lg:text-lg font-medium py-5">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
                 <div class="flex gap-4 p-5 bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white rounded-xl font-bold w-[200px]">
                     <div>
                         <button>
@@ -40,37 +40,79 @@
                 <div class="flex align-center justify-center gap-4 relative -top-20 left-24 bg-white rounded-xl p-5 w-64" style="box-shadow: 0px 7px 50px 0px rgba(0, 0, 0, 0.06);">
                     <div><img src="./images/star-icon.jpg" alt=""></div>
                     <div>
-                        <h4 class="text-black text-3xl font-extrabold">5.00</h4>
-                        <p class="text-[#777777] text-lg font-medium">Trust Pilot Ratings</p>
+                        <h4 class="text-black text-2xl lg:text-3xl font-extrabold">5.00</h4>
+                        <p class="text-[#777777] text-sm lg:text-lg font-medium">Trust Pilot Ratings</p>
                     </div>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <section class="text-center">
-            <h3 class="font-bold text-[2.8125rem]">Our Featured Products</h3>
-            <p class="text-lg text-[#777777] font-medium">There are many variations of passages of Lorem Ipsum available, but the majority  have suffered <br>alteration in some form, by injected humour, or randomised words <br> which don't look even slightly believable. </p>
-            <div class="flex justify-center gap-6 mt-10">
+        <section class="text-center py-7 lg:py-14 px-6">
+            <h3 class="font-bold text-3xl lg:text-[2.8125rem]">Our Featured Products</h3>
+            <p class="text-sm lg:text-lg text-[#777777] font-medium py-5">There are many variations of passages of Lorem Ipsum available, but the majority  have suffered <br>alteration in some form, by injected humour, or randomised words <br> which don't look even slightly believable. </p>
+            <div class="flex flex-col lg:flex-row justify-center gap-6 mt-10">
                 <div class="p-10 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
                     <img src="./images/tea-1.png" class="block mx-auto mb-4">
                     <h4 class="font-bold text-2xl">Milk Tea</h4>
-                    <p class="text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
+                    <p class="text-sm lg:text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
                 </div>
                 <div class="p-10 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
                     <img src="./images/tea-2.png" class="block mx-auto mb-4">
                     <h4 class="font-bold text-2xl">Black Tea</h4>
-                    <p class="text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
+                    <p class="text-sm lg:text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
                 </div>
                 <div class="p-10 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
                     <img src="./images/tea-3.png" class="block mx-auto mb-4">
                     <h4 class="font-bold text-2xl">Black Tea</h4>
-                    <p class="text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
+                    <p class="text-sm lg:text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
                 </div>
                 <div class="p-10 bg-gradient-to-b from-[#e9e4e4] to-white rounded-xl">
                     <img src="./images/tea-4.png" class="block mx-auto mb-4">
                     <h4 class="font-bold text-2xl">Black Tea</h4>
-                    <p class="text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
+                    <p class="text-sm lg:text-lg text-[#777777] font-medium">Creamer could be <br> replaced by fresh milk</p>
+                </div>
+            </div>
+        </section>
+        <section class="flex flex-col px-5 lg:flex-row gap-12 lg:mx-44 mb-8 w-full">
+            <div class="grid grid-cols-2 grid-rows-3  gap-8">
+                <div class="rounded-xl bg-gradient-to-r from-[#f0dada] to-[#f5e8ee] ">
+                    
+                </div>
+                <div class="bg-[#E6A6231A] row-span-2 rounded-xl p-6">
+                    <img src="./images/fresh-1.png" alt="">
+                </div>
+                <div class="bg-[#5776391A] row-span-2 rounded-xl p-6">
+                    <img src="./images/fresh-2.png" alt="">
+                </div>
+                <div class="bg-gradient-to-r from-[#D9D9D9] to-white rounded-xl">
+                    
+                </div>
+            </div>
+            <div class="lg:w-1/2">
+                <h3 class="font-bold text-3xl lg:text-[2.8125rem]">
+                    Great Tea, Freshly Presented
+                </h3>
+                <p  class="text-sm lg:text-lg text-[#777777] font-medium py-8">
+                    The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+                </p>
+                <div>
+                    <div>
+                        <h4 class="font-bold text-2xl">
+                        Unique Taste
+                        </h4>
+                        <p  class="text-sm lg:text-lg text-[#777777] font-medium pb-5">
+                            A Unique and different style from other teapots gives a luxurious and minimalist impression
+                        </p>
+                    </div>
+                    <div>
+                        <h4 class="font-bold text-2xl">
+                        Premium Quality
+                        </h4>
+                        <p  class="text-sm lg:text-lg text-[#777777] font-medium">
+                            Premium Quality that makes tea more elegant and more durable when you use it.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
