--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </section>
-        <section class="flex flex-col px-5 lg:flex-row gap-12 lg:mx-44 mb-8 w-full">
+        <section class="flex flex-col px-5 lg:flex-row gap-12 lg:mx-32 mb-8">
             <div class="grid grid-cols-2 grid-rows-3  gap-8">
                 <div class="rounded-xl bg-gradient-to-r from-[#f0dada] to-[#f5e8ee] ">
                     
@@ -112,6 +112,68 @@
                         <p  class="text-sm lg:text-lg text-[#777777] font-medium">
                             Premium Quality that makes tea more elegant and more durable when you use it.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-gradient-to-r from-[orange] to-[red] rounded-xl lg:p-14 m-5 p-10 pb-0 lg:m-32 flex flex-col lg:flex-row lg:gap-10">
+            <div class="text-white  lg:w-[60%] flex justify-center items-center">
+                <div>
+                    <h3 class="font-bold text-3xl lg:text-[2.8125rem]">
+                    Meet Our Super <br> Clients
+                    </h3>
+                    <p class="text-sm lg:text-lg font-medium py-8" >
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.          
+                    </p>
+                    <button class="px-7 py-4 bg-white rounded-xl text-orange-600 font-bold">
+                        Show All
+                    </button>
+                </div>
+            </div>
+            <div>
+                <div class="bg-white rounded-xl p-5 opacity-50 relative lg:left-44 w-full lg:w-3/4 top-24">
+                    <img src="./images/client.png"  class="absolute rounded-full bg-white p-1 -top-8 -left-8">
+                    <p class="text-sm lg:text-lg font-medium pb-7 pt-4">
+                        We are providing the best and suitable home insurance services for the people who are interested to treatment
+                    </p>
+                    <h4 class="font-bold text-2xl">
+                        Ilham Yuda
+                    </h4>
+                    <P class="text-sm lg:text-lg font-medium">
+                        Businessman
+                    </P>
+                    <div class="absolute right-6 bottom-2">
+                        <img src="./images/circles.png">
+                    </div>
+                </div>
+                <div class="bg-white rounded-xl p-5 z-10 w-full relative lg:w-3/4 lg:left-16">
+                    <img src="./images/client.png"  class="absolute rounded-full bg-white p-1 -top-8 -left-8">
+                    <p class="text-sm lg:text-lg font-medium pb-7 pt-4">
+                        We are providing the best and suitable home insurance services for the people who are interested to treatment
+                    </p>
+                    <h4 class="font-bold text-2xl">
+                        Ilham Yuda
+                    </h4>
+                    <P class="text-sm lg:text-lg font-medium">
+                        Businessman
+                    </P>
+                    <div class="absolute right-6 bottom-2">
+                        <img src="./images/circles.png">
+                    </div>
+                </div>
+                <div class="bg-white rounded-xl p-5 opacity-50 relative lg:left-44 w-full -top-20 lg:w-3/4">
+                    <img src="./images/client.png"  class="absolute rounded-full bg-white p-1 -top-8 -left-8">
+                    <p class="text-sm lg:text-lg font-medium pb-7 pt-4">
+                        We are providing the best and suitable home insurance services for the people who are interested to treatment
+                    </p>
+                    <h4 class="font-bold text-2xl">
+                        Ilham Yuda
+                    </h4>
+                    <P class="text-sm lg:text-lg font-medium">
+                        Businessman
+                    </P>
+                    <div class="absolute right-6 bottom-2">
+                        <img src="./images/circles.png">
                     </div>
                 </div>
             </div>
