--- a/index.html
+++ b/index.html
@@ -178,6 +178,35 @@
                 </div>
             </div>
         </section>
+        <section class="my-24 mx-6 lg:mx-36">
+            <h3 class="font-bold text-3xl lg:text-[2.8125rem] text-center">News & Events</h3>
+            <p class="text-sm text-[#777777] lg:text-lg font-medium py-5 text-center">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+            </p>
+            <div class="flex flex-col lg:flex-row gap-8">
+                <div class="border-[#d0cccc] boder-solid border-[1px] rounded-xl p-5">
+                    <img src="./images/news-1.png" alt="">
+                    <p class="text-sm text-[#777777] lg:text-lg font-medium py-5">Feb 05, 2027</p>
+                    <h4 class="font-bold text-2xl">Collecting 8 points for discount</h4>
+                    <p class="text-sm text-[#777777] lg:text-lg font-medium py-5">There are many variations of passages of Lorem Ipsum available.</p>
+                    <h5 class="font-bold text-lg">Learn More</h5>
+                </div>
+                <div class="border-[#d0cccc] boder-solid border-[1px] rounded-xl p-5">
+                    <img src="./images/news-2.png" alt="">
+                    <p class="text-sm text-[#777777] lg:text-lg font-medium py-5">Feb 05, 2027</p>
+                    <h4 class="font-bold text-2xl">Collecting 8 points for discount</h4>
+                    <p class="text-sm text-[#777777] lg:text-lg font-medium py-5">There are many variations of passages of Lorem Ipsum available.</p>
+                    <h5 class="font-bold text-lg">Learn More</h5>
+                </div>
+                <div class="border-[#d0cccc] boder-solid border-[1px] rounded-xl p-5">
+                    <img src="./images/news-3.png" alt="">
+                    <p class="text-sm text-[#777777] lg:text-lg font-medium py-5">Feb 05, 2027</p>
+                    <h4 class="font-bold text-2xl">Collecting 8 points for discount</h4>
+                    <p class="text-sm text-[#777777] lg:text-lg font-medium py-5">There are many variations of passages of Lorem Ipsum available.</p>
+                    <h5 class="font-bold text-lg">Learn More</h5>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
