--- a/index.html
+++ b/index.html
@@ -208,5 +208,50 @@
             </div>
         </section>
     </main>
+    <footer class="bg-[#f2c9c9] lg:px-36 px-7 py-16 ">
+        <section class="flex flex-col lg:flex-row justify-between gap-10">
+            <div>
+                <img src="./images/cup.png" class="mx-auto">
+            </div>
+            <div class="flex gap-1.5 lg:gap-9">
+                <p class="text-lg text-[#6d6b6b] lg:text-xl font-medium py-5">Ready to get started?</p>
+                <button class="p-5 bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white rounded-xl font-bold lg:text-xl">Get Started</button>
+            </div>
+        </section>
+        <section class="flex flex-col lg:flex-row lg:justify-between gap-6 pt-16">
+            <div>
+                <h4 class="font-bold text-2xl">Quick Links</h4>
+                <ul type="none" class="text-sm text-[#777777] lg:text-lg font-medium py-4">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Insurance</li>
+                    <li>Privacy Policy</li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-bold text-2xl">Our Service</h4>
+                <ul type="none" class="text-sm text-[#777777] lg:text-lg font-medium py-2">
+                    <li>Life Insurance</li>
+                    <li>Car Insurance</li>
+                    <li>Health Insurance</li>
+                    <li>House Insurance</li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-bold text-2xl">Help</h4>
+                <ul type="none" class="text-sm text-[#777777] lg:text-lg font-medium py-2">
+                    <li>FAQs</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-bold text-2xl">Subscribe to our newsletter</h4>
+                <p class="text-sm text-[#777777] lg:text-lg font-medium py-2">Email address</p>
+                <div class="border-solid border-[1px] border-[#a8a4a4]"></div>
+                <div><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+            </div>
+        </section>
+        <section class="text-center lg:py-16 py-6 text-sm text-[#777777] lg:text-lg font-medium">© 2027 UIDesign.to - All rights reserved.</section>
+    </footer>
 </body>
 </html>
